[package]
name = "cfs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfs-sys = { git = "https://git.psu.edu/BlackCAT/fsw/cfs-sys-rs.git", rev = "a68965f8936b93e153b992744e93e451e7739ac1" }
printf-wrap = { git = "https://git.psu.edu/BlackCAT/fsw/printf-wrap.git", rev = "ba319eaed99d5d842fd61c6e6ee7b9b02aa97aa8", default-features = false }
libc = { version = "^0.2.107", default-features = false }
