[package]
name = "cfs-sys"
version = "0.0.0"
description = "Low-level bindings to cFE and OSAL C APIs"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
publish = false
workspace = ".."
keywords = ["cFS", "cFE", "OSAL", "flight-software", "no_std"]
categories = ["aerospace", "external-ffi-bindings", "no-std"]

[dependencies]
libc = { version = "^0.2.107", default-features = false }

[build-dependencies]
bindgen = "^0.59.1"
cc = "^1.0"
