[package]
name = "n2o4"
version = "0.0.0"
description = "Idiomatic, safe Rust bindings to cFE and OSAL APIs"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
publish = false
workspace = ".."
keywords = ["cFS", "cFE", "OSAL", "flight-software", "no_std"]
categories = ["aerospace", "api-bindings", "no-std"]

[dependencies]
cfs-sys = { path = "../cfs-sys" }
printf-wrap = { version = "^0.2", default-features = false }
libc = { version = "^0.2.107", default-features = false }
